@@ -4,7 +4,8 @@ New features:
 A.F....... [ZBX-1357] updated Dutch, Finnish, Indonesian, Italian, Lithuanian, Persian, Portuguese (Portugal), Russian and Slovak translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
-..F....... [ZBX-7126] fixed host inventories details tab displaing (Eduard)
+..F....... [ZBX-7134] fixed host inventory interface table when no agent interfaces are set (Ivo)
+..F....... [ZBX-7126] fixed host inventories details tab displaying (Eduard)
 ..F.I..... [ZBX-7066] corrected downloadable configuration file name in setup step 6 (Ivo)
 A......... [ZBX-7101] fixed generated SQL queries in action.get method when simultaneously selecting more than one condition and operation (Ivo)
 
